Editar y eliminar registros de persona

--- a/AppAgularTest/ClientApp/src/app/components/form-persona/form-persona.component.html
+++ b/AppAgularTest/ClientApp/src/app/components/form-persona/form-persona.component.html
@@ -33,6 +33,7 @@
       <div>
         <br />
         <input [disabled]="!persona.valid" type="submit" value="Guardar" class="btn btn-primary" />
+        &nbsp;
         <button class="btn btn-danger" [routerLink]="['/editpersonas']">Regresar</button>
       </div>
     </form>
