--- a/AppAgularTest/ClientApp/src/app/components/form-persona/form-persona.component.html
+++ b/AppAgularTest/ClientApp/src/app/components/form-persona/form-persona.component.html
@@ -9,26 +9,65 @@
       <div>
         <label>Nombre</label>
         <input type="text" class="form-control" formControlName="nombre" />
+        <div *ngIf="persona.controls['nombre'].errors?.required" style="color:red">
+          El nombre de la persona es obligatorio
+        </div>
+        <div *ngIf="persona.controls['nombre'].errors?.maxlength" style="color:red">
+          Supero la logitud maxima
+        </div>
       </div>
       <div>
         <label>Primer apellido</label>
         <input type="text" class="form-control" formControlName="primerApellido" />
+        <div *ngIf="persona.controls['primerApellido'].errors?.required" style="color:red">
+          El primer apellido de la persona es obligatorio
+        </div>
+        <div *ngIf="persona.controls['primerApellido'].errors?.maxlength" style="color:red">
+          Supero la logitud maxima
+        </div>
       </div>
       <div>
         <label>Segundo apellido</label>
         <input type="text" class="form-control" formControlName="segundoApellido" />
+        <div *ngIf="persona.controls['segundoApellido'].errors?.required" style="color:red">
+          El segundo apellido de la persona es obligatorio
+        </div>
+        <div *ngIf="persona.controls['segundoApellido'].errors?.maxlength" style="color:red">
+          Supero la logitud maxima
+        </div>
       </div>
       <div>
         <label>Fecha de nacimiento</label>
         <input type="date" class="form-control" formControlName="fechaNacimiento" />
+        <!--<div *ngIf="producto.controls['fechaNacimiento'].errors?.required" style="color:red">
+          La fecha de nacimiento de la persona es obligatorio
+        </div>-->
       </div>
       <div>
         <label>Telefono</label>
         <input type="number" class="form-control" formControlName="telefono" />
+        <div *ngIf="persona.controls['telefono'].errors?.required" style="color:red">
+          El telefono de la persona es obligatorio
+        </div>
+        <div *ngIf="persona.controls['telefono'].errors?.maxlength" style="color:red">
+          Supero la logitud maxima
+        </div>
       </div>
       <div>
         <label>Correo</label>
         <input type="text" class="form-control" formControlName="correo" />
+        <div *ngIf="persona.controls['correo'].errors?.required" style="color:red">
+          El correo de la persona es obligatorio
+        </div>
+        <div *ngIf="persona.controls['correo'].errors?.maxlength" style="color:red">
+          Supero la logitud maxima
+        </div>
+        <div *ngIf="persona.controls['correo'].errors?.pattern" style="color:red">
+          El correo no es valido
+        </div>
+        <div *ngIf="persona.controls['correo'].errors?.yaExiste" style="color:red">
+          El correo ya en la base de datos
+        </div>
       </div>
       <div>
         <br />
