--- a/AppAgularTest/ClientApp/src/app/components/productos/productos.component.html
+++ b/AppAgularTest/ClientApp/src/app/components/productos/productos.component.html
@@ -3,15 +3,22 @@
   <thead class="thead-dark">
     <tr>
       <th *ngFor="let cabecera of cabeceras">{{cabecera}}</th>
+      <th *ngIf="isEdit">Operaciones</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let producto of productos">
+    <tr *ngFor="let producto of productos | paginate: { itemsPerPage: 10, currentPage: p }">
       <td>{{producto.idProducto}}</td>
       <td>{{producto.nombre}}</td>
       <td>{{producto.precio}}</td>
       <td>{{producto.stock}}</td>
       <td>{{producto.nombreCategoria}}</td>
+      <td *ngIf="isEdit">
+        <i [routerLink]="['/editproductos',producto.idProducto]" class="fa fa-edit btn btn-primary"></i>
+        &nbsp;
+        <i class="fa fa-trash btn btn-danger" (click)="eliminarProducto(producto.idProducto)"></i>
+      </td>
     </tr>
   </tbody>
 </table>
+<pagination-controls (pageChange)="p = $event"></pagination-controls>
