--- a/AppAgularTest/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AppAgularTest/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -33,6 +33,8 @@
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/productos']">Productos</a>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/editproductos']">Editar Productos</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/personas']">Personas</a>
