--- a/AppAgularTest/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/AppAgularTest/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -45,6 +45,9 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/usuarios']">Usuarios</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/edituser']">Editar Usuarios</a>
+          </li>
         </ul>
       </div>
     </div>
