--- a/AppAgularTest/ClientApp/src/app/components/form-producto/form-producto.component.html
+++ b/AppAgularTest/ClientApp/src/app/components/form-producto/form-producto.component.html
@@ -53,6 +53,10 @@
         Esta prohibido el punto decimal
       </div>
     </div>
+    <div class="form-group">
+      <img src="{{foto}}" width="200" height="200" />
+      <input type="file" (change)="changeFoto()" id="fupFoto" class="form-control" accept="image/*" />
+    </div>
     <br />
     <div>
       <br />
